Bổ sung thẻ SEO meta

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NVM Heavy Booster Program</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="content-language" content="vi" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Chương trình huấn luyện NVM Heavy Booster Program, Nâng tầm lập trình viên, dành cho lập trình viên 1-3 năm kinh nghiệm" />
+  <meta name="keywords" content="NVM Heavy Booster Program, Người Viết Mã">
 
   <!--=============== FAVICON ===============-->
   <!-- <link rel="shortcut icon" href="" type="image/x-icon" /> -->
@@ -48,10 +51,9 @@
         <!-- <p class="top-title">NVM Heavy Booster Program</p> -->
         <h1 class="title">NVM Heavy Booster Program</h1>
         <p class="paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam
-          in aliquid suscipit odit sed sequi.
+          Chương trình huấn luyện NVM Heavy Booster Program, Nâng tầm lập trình viên, dành cho lập trình viên 1-3 năm kinh nghiệm tổ chức bởi Người Viết Mã
         </p>
-        <button class="primary-btn">Full Story</button>
+        <button class="primary-btn">Xem chi tiết</button>
       </div>
     </section>
   </header>
