Cập nhật content

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <!-- <p class="top-title">NVM Heavy Booster Program</p> -->
         <h1 class="title">NVM Heavy Booster Program</h1>
         <p class="paragraph">
-          Chương trình huấn luyện NVM Heavy Booster Program, Nâng tầm lập trình viên, dành cho lập trình viên 1-3 năm kinh nghiệm tổ chức bởi Người Viết Mã
+          Chương trình huấn luyện NVM Heavy Booster Program, Nâng tầm lập trình viên, chương trình học sâu dành cho lập trình viên 1-3 năm kinh nghiệm tổ chức bởi Người Viết Mã
         </p>
-        <button class="primary-btn">Xem chi tiết</button>
+        <button class="primary-btn">Các chương trình</button>
       </div>
     </section>
   </header>
@@ -80,13 +80,15 @@
         <img src="assets/img/about_us_2.jpg" alt="about image" />
       </div>
       <div class="description">
-        <p class="top-title">About Us</p>
-        <h2 class="title">We Innovate Digital Goods</h2>
+        <p class="top-title">[Learn Deep]</p>
+        <h2 class="title">Cơ sở dữ liệu nền tảng - Thấu hiểu trình tối ưu hoá cơ sở dữ liệu</h2>
         <p class="paragraph">
-          Topre eohen derit in voluptate velit esse cillum Lorem ipsum dolor
-          sit amet, conse ctetur adipisicing elit, sed do eiusmod te mpor
-          incididunt ut labore et dolore ma gna aliqua. Ut enim ad minim
-          veniam quis nostrud exercitation ullamco
+          Hiệu năng database chính là điểm nghẽn thường gặp nhất của anh em lập trình viên. Nhưng hầu
+          hết anh em lập trình viên thường chỉ đủ kiến thức để làm "user" của các Hệ quản trị CSDL, cùng với một vài cái trick, hack để tối ưu về hiệu năng
+          mà chưa đi sâu vào nền tảng. Tham gia chương trình <strong>Cơ sở dữ liệu nền tảng - Thấu hiểu trình tối ưu hoá cơ sở dữ liệu</strong>
+          từ team Người Viết Mã để cùng nhau đào sâu bên trong cỗ máy dữ liệu và tìm kiếm các kiến thức nền tảng để làm cơ sở phân tích và tối ưu hiệu năng
+          một khách khoa học nhất. 
+          <button class="primary-btn">Đăng ký chương trình</button>
         </p>
         <p class="paragraph">
           Topre eohen derit in voluptate velit esse cillum Lorem ipsum dolor
