--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <nav class="desktop-menu mobile-hidden">
         <ul>
           <li><a href="#home_section">Home</a></li>
-          <li><a href="#about_section">About</a></li>
+          <li><a href="#db_optimize">About</a></li>
           <li><a href="#products_section">Products</a></li>
           <li><a href="#team_section">Team</a></li>
           <li><a href="#blog_section">Blog</a></li>
@@ -62,7 +62,7 @@
     <nav id="mobile-menu" class="menu mobile">
       <ul>
         <li><a href="#home_section">Home</a></li>
-        <li><a href="#about_section">About</a></li>
+        <li><a href="#db_optimize">About</a></li>
         <li><a href="#products_section">products</a></li>
         <li><a href="#team_section">Team</a></li>
         <li><a href="#blog_section">Blog</a></li>
@@ -75,7 +75,7 @@
   <main>
     <!--==================== About ====================-->
 
-    <section id="about_section" class="section flex-desktop container">
+    <section id="db_optimize" class="section flex-desktop container">
       <div class="img img-center about_cnt">
         <img src="assets/img/about_us_2.jpg" alt="about image" />
       </div>
