--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <nav class="desktop-menu mobile-hidden">
         <ul>
           <li><a href="#home_section">Home</a></li>
-          <li><a href="#db_optimize">About</a></li>
+          <li><a href="#db_optimize">Database Optimize Program</a></li>
           <li><a href="#products_section">Products</a></li>
           <li><a href="#team_section">Team</a></li>
           <li><a href="#blog_section">Blog</a></li>
@@ -53,7 +53,7 @@
         <p class="paragraph">
           Chương trình huấn luyện NVM Heavy Booster Program, Nâng tầm lập trình viên, chương trình học sâu dành cho lập trình viên 1-3 năm kinh nghiệm tổ chức bởi Người Viết Mã
         </p>
-        <button class="primary-btn">Các chương trình</button>
+        <a href="#db_optimize" class="primary-btn">Các chương trình</button>
       </div>
     </section>
   </header>
@@ -62,7 +62,7 @@
     <nav id="mobile-menu" class="menu mobile">
       <ul>
         <li><a href="#home_section">Home</a></li>
-        <li><a href="#db_optimize">About</a></li>
+        <li><a href="#db_optimize">Database Optimize Program</a></li>
         <li><a href="#products_section">products</a></li>
         <li><a href="#team_section">Team</a></li>
         <li><a href="#blog_section">Blog</a></li>
