--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p class="paragraph">
           Chương trình huấn luyện NVM Heavy Booster Program, Nâng tầm lập trình viên, chương trình học sâu dành cho lập trình viên 1-3 năm kinh nghiệm tổ chức bởi Người Viết Mã
         </p>
-        <a href="#db_optimize" class="primary-btn">Các chương trình</button>
+        <a href="#db_optimize" class="primary-btn">Các chương trình</a>
       </div>
     </section>
   </header>
