--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <p class="paragraph">
           Chương trình huấn luyện NVM Heavy Booster Program, Nâng tầm lập trình viên, chương trình học sâu dành cho lập trình viên 1-3 năm kinh nghiệm tổ chức bởi Người Viết Mã
         </p>
+        <br/>
         <a href="#db_optimize" class="primary-btn">Các chương trình</a>
       </div>
     </section>
@@ -73,7 +74,7 @@
 
   <!--==================== Main ====================-->
   <main>
-    <!--==================== About ====================-->
+    <!--==================== Cơ sở dữ liệu nền tảng - Thấu hiểu trình tối ưu hoá cơ sở dữ liệu ====================-->
 
     <section id="db_optimize" class="section flex-desktop container">
       <div class="img img-center about_cnt">
@@ -83,11 +84,30 @@
         <p class="top-title">[Learn Deep]</p>
         <h2 class="title">Cơ sở dữ liệu nền tảng - Thấu hiểu trình tối ưu hoá cơ sở dữ liệu</h2>
         <p class="paragraph">
-          Hiệu năng database chính là điểm nghẽn thường gặp nhất của anh em lập trình viên. Nhưng hầu
+          Hiệu năng database chính là điểm nghẽn thường gặp nhất của anh em lập trình viên khi làm sản phẩm. Nhưng hầu
           hết anh em lập trình viên thường chỉ đủ kiến thức để làm "user" của các Hệ quản trị CSDL, cùng với một vài cái trick, hack để tối ưu về hiệu năng
           mà chưa đi sâu vào nền tảng. Tham gia chương trình <strong>Cơ sở dữ liệu nền tảng - Thấu hiểu trình tối ưu hoá cơ sở dữ liệu</strong>
           từ team Người Viết Mã để cùng nhau đào sâu bên trong cỗ máy dữ liệu và tìm kiếm các kiến thức nền tảng để làm cơ sở phân tích và tối ưu hiệu năng
-          một khách khoa học nhất. 
+          một khách khoa học nhất.
+        </p>
+        <button class="primary-btn">Đăng ký chương trình</button>
+      </div>
+    </section>
+
+    <!--==================== From Developer to Software Architect ====================-->
+
+    <section id="software_architect" class="section flex-desktop container">
+      <div class="img img-center about_cnt">
+        <img src="assets/img/about_us_2.jpg" alt="about image" />
+      </div>
+      <div class="description">
+        <p class="top-title">[Learn Deep]</p>
+        <h2 class="title">From Developer to Software Architect</h2>
+        <p class="paragraph">
+          Chuyển đổi tư duy từ Developer sang tư duy của Software Architect là bước đệm "thăng hạng" mà anh em lập trình viên cần phải có nếu muốn
+          tiến xa hơn trong sự nghiệp của mình. Bạn đã bao giờ tham gia một dự án có thiết kế tồi tệ đến mức bạn muốn "đập đi làm lại" chưa?
+          Ngoài kia rất nhiều sản phẩm như thế cần được giải cứu, tham gia chưa trình để khám phá những thiết kế phần mềm cốt lõi để xây dựng phần mềm
+          phức tạp.
         </p>
         <button class="primary-btn">Đăng ký chương trình</button>
       </div>
