--- a/index.html
+++ b/index.html
@@ -112,6 +112,26 @@
         <button class="primary-btn">Đăng ký chương trình</button>
       </div>
     </section>
+
+    <!--==================== NVM Next Leader ====================-->
+
+    <section id="software_architect" class="section flex-desktop container">
+      <div class="img img-center about_cnt">
+        <img src="assets/img/about_us_2.jpg" alt="about image" />
+      </div>
+      <div class="description">
+        <p class="top-title">[Learn Deep]</p>
+        <h2 class="title">NVM Next Leader</h2>
+        <p class="paragraph">
+          Về mặt kiến thức thì <strong>NVM Next Leader</strong> là chương trình tổng hợp của <strong>Cơ sở dữ liệu nền tảng
+            - Thấu hiểu trình tối ưu hoá cơ sở dữ liệu</strong> và <strong>From Developer to Software Architect</strong> nhằm tối ưu chi phí cho học viên
+            muốn trang bị đủ 2 mảng kiến thức này.
+             Hơn thế nữa, đây là một chương trình nhắm đến việc trang bị các tố chất cần thiết để trở thành leader trong tương lai, hướng đến một thế
+             hệ leader thiện chiến và đầy nhiệt huyết, có khả năng tạo nên các sản phẩm phần mêm chất lượng cung cấp cho thị trường.
+        </p>
+        <button class="primary-btn">Đăng ký chương trình</button>
+      </div>
+    </section>
     <!--==================== Products ====================-->
     <section id="products_section" class="section container">
         <div class="text-center">
