--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           từ team Người Viết Mã để cùng nhau đào sâu bên trong cỗ máy dữ liệu và tìm kiếm các kiến thức nền tảng để làm cơ sở phân tích và tối ưu hiệu năng
           một khách khoa học nhất.
         </p>
-        <button class="primary-btn">Đăng ký chương trình</button>
+        <a href="https://forms.gle/TrZe3iaGKvNjM4BBA" class="primary-btn">Đăng ký tư vấn</a>
       </div>
     </section>
 
@@ -109,7 +109,7 @@
           Ngoài kia rất nhiều sản phẩm như thế cần được giải cứu, tham gia chưa trình để khám phá những thiết kế phần mềm cốt lõi để xây dựng phần mềm
           phức tạp.
         </p>
-        <button class="primary-btn">Đăng ký chương trình</button>
+        <a href="https://forms.gle/TrZe3iaGKvNjM4BBA" class="primary-btn">Đăng ký tư vấn</a>
       </div>
     </section>
 
@@ -127,9 +127,9 @@
             - Thấu hiểu trình tối ưu hoá cơ sở dữ liệu</strong> và <strong>From Developer to Software Architect</strong> nhằm tối ưu chi phí cho học viên
             muốn trang bị đủ 2 mảng kiến thức này.
              Hơn thế nữa, đây là một chương trình nhắm đến việc trang bị các tố chất cần thiết để trở thành leader trong tương lai, hướng đến một thế
-             hệ leader thiện chiến và đầy nhiệt huyết, có khả năng tạo nên các sản phẩm phần mêm chất lượng cung cấp cho thị trường.
+             hệ leader thiện chiến và đầy nhiệt huyết, có khả năng tạo nên các sản phẩm phần mềm chất lượng cung cấp cho thị trường.
         </p>
-        <button class="primary-btn">Đăng ký chương trình</button>
+        <a href="https://forms.gle/TrZe3iaGKvNjM4BBA" class="primary-btn">Đăng ký tư vấn</a>
       </div>
     </section>
     <!--==================== Products ====================-->
